--- a/css/theme/black.css
+++ b/css/theme/black.css
@@ -41,10 +41,12 @@ body {
   letter-spacing: normal;
   text-transform: uppercase;
   text-shadow: none;
-  word-wrap: break-word; }
+  word-wrap: break-word;
+  background-color: gray;}
 
 .reveal h1 {
-  font-size: 2.5em; }
+  font-size: 2.5em;
+   opacity: 0.7;}
 
 .reveal h2 {
   font-size: 1.6em; }
@@ -63,7 +65,8 @@ body {
  *********************************************/
 .reveal p {
   margin: 20px 0;
-  line-height: 1.3; }
+  line-height: 1.3;
+  background-color: gray;}
 
 /* Ensure certain elements are never larger than the slide itself */
 .reveal img, .reveal video, .reveal iframe {
@@ -85,7 +88,9 @@ body {
   list-style-type: decimal; }
 
 .reveal ul {
-  list-style-type: disc; }
+  list-style-type: disc;
+  background-color: gray;
+  opacity: 0.7;}
 
 .reveal ul ul {
   list-style-type: square; }
